--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,30 @@
-# fly.toml app configuration file generated for trail-rider on 2023-04-27T10:39:41-04:00
+# fly.toml app configuration file generated for trail-rider-aged-log-207 on 2025-05-12T20:53:05-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "trail-rider"
-primary_region = "ewr"
+app = 'trail-rider-aged-log-207'
+primary_region = 'ewr'
+
+[build]
 
 [env]
-  PORT = "8080"
+  PORT = '8080'
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
 
 [checks]
   [checks.alive]
-    type = "tcp"
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "5s"
+    type = 'tcp'
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '5s'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
